# Scientific-calculator-v1.0

./: .gitignore  README.md  README_RUS.md
src/: CMakeLists.txt  Makefile  dxgn_CPP_CALC.conf  main.cc
src/controller/: controller.h
src/model/: CMakeLists.txt  model.cc  model.h
src/model/lib/: functions.h
src/model/tests/: tests.cc
src/view/: qcustomplot.cc  view.cc  view.h  view.ui
